# maemo-security-certman-applet

./: AUTHORS  Makefile.am  autogen.sh  configure.ac
cfg/: maemosec_certman_mimehandler.desktop.in
debian/: changelog  control  copyright  libmaemosec-certman-applet-dev.files  libmaemosec-certman-applet-dev.install  maemosec-certman-applet.files  maemosec-certman-applet.install  maemosec-certman-applet.postinst  rules
etc/: Makefile.am
mime/: Makefile.am  maemosec_certman.xml
pkgconfig/: maemosec-certman-applet.pc.in
src/: Makefile.am  applet_main.c  applet_start.c  applet_start.h  cm_dialogs.c  cm_dialogs.h  cm_envelopes.c  cm_envelopes.h  i18n.h  maemosec_certman_service.c  osso-applet-certman.h
src/cfg/: maemosec_certman.service.in  maemosec_certman_applet.desktop.in  maemosec_certman_mimehandler.desktop.in
src/srv/: cm_service.c  dbus.c  dbus.h
src/ui/: callbacks.c  callbacks.h  details.c  importexport.c  interface.c  interface.h  osso-applet-certman.h  password.c  password.h  trust.c  uidefs.h  uiutils.c  uiutils.h
